--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
 		"email": "email dev"
 	},
 	"dependencies": {
+		"@googleapis/calendar": "^12.0.0",
 		"@hookform/resolvers": "^3.6.0",
 		"@motionone/utils": "^10.18.0",
-		"@next/third-parties": "^15.0.0",
+		"@next/third-parties": "^16.0.1",
 		"@plaiceholder/next": "^3.0.0",
 		"@radix-ui/react-accordion": "^1.2.0",
 		"@radix-ui/react-avatar": "^1.1.1",
@@ -33,7 +34,7 @@
 		"framer-motion": "^11.2.4",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.378.0",
-		"next": "^14.2.3",
+		"next": "^16.0.1",
 		"next-sanity": "^9.4.2",
 		"react": "^18",
 		"react-dom": "^18",
