--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"@radix-ui/react-toast": "^1.2.1",
 		"@react-email/components": "^0.0.19",
 		"@sanity/image-url": "^1.0.2",
-		"@sanity/vision": "^3.52.3",
+    "@sanity/vision": "^3.60.0",
 		"@tabler/icons-react": "^3.5.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -35,7 +35,7 @@
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.378.0",
 		"next": "^16.0.1",
-		"next-sanity": "^9.4.2",
+    "next-sanity": "^9.12.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-email": "^2.1.4",
@@ -43,7 +43,8 @@
 		"react-phone-number-input": "^3.4.11",
 		"react-responsive": "^10.0.0",
 		"resend": "^3.3.0",
-		"sanity": "^3.52.3",
+    "sanity": "^3.60.0",
+    "@sanity/visual-editing": "^2.2.0",
 		"sharp": "^0.33.5",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
