--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "ignorePatterns": [
+    "next.config.*",
+    "postcss.config.*",
+    "tailwind.config.*",
+    "sanity.config.*"
+  ]
 }
