--- a/package.json
+++ b/package.json
@@ -35,16 +35,18 @@
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.378.0",
 		"next": "^16.0.1",
-    "next-sanity": "^9.12.0",
+	    "next-sanity": "^9.12.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-is": "^18.3.1",
 		"react-email": "^2.1.4",
 		"react-hook-form": "^7.52.0",
 		"react-phone-number-input": "^3.4.11",
 		"react-responsive": "^10.0.0",
 		"resend": "^3.3.0",
-    "sanity": "^3.60.0",
-    "@sanity/visual-editing": "^2.2.0",
+	    "sanity": "^3.60.0",
+	    "@sanity/visual-editing": "^2.2.0",
+		"styled-components": "^6.1.11",
 		"sharp": "^0.33.5",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
@@ -58,7 +60,7 @@
 		"@types/react-dom": "^18",
 		"@types/react-phone-number-input": "^3.0.17",
 		"eslint": "^8",
-		"eslint-config-next": "14.2.3",
+		"eslint-config-next": "^16.0.1",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
