--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "framer-motion": "^11.2.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-sanity": "^12.0.12",
     "react": "^18",
     "react-dom": "^18",
@@ -64,7 +64,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-phone-number-input": "^3.0.17",
-    "baseline-browser-mapping": "^2.9.15",
+    "baseline-browser-mapping": "^2.9.19",
     "eslint": "^8",
     "eslint-config-next": "^16.0.1",
     "postcss": "^8",
